--- a/notebooklnDeclare_models.ipynb
+++ b/notebooklnDeclare_models.ipynb
@@ -7,41 +7,186 @@
    "source": [
     "# ORM Quick Start\n",
     "\n",
-    "- SQLAlchemy는 \"파이썬을 위한 데이터베이스 툴킷\"으로, 데이터베이스 연결, 쿼리 및 결과 상호 작용, SQL 문 프로그래밍 방식 구성 등을 관리하는 도구를 제공\n",
+    "SQLAlchemy는 \"파이썬을 위한 데이터베이스 툴킷\"으로, 데이터베이스 연결, 쿼리 및 결과 상호 작용, SQL 문 프로그래밍 방식 구성 등을 관리하는 도구를 제공\n",
     "\n",
     "- Core: 데이터베이스 연결 관리, SQL 쿼리 및 결과 처리, SQL 문장 프로그래밍 방식 구성 등을 위한 기본 아키텍처\n",
     "\n",
     "- ORM (Object Relational Mapping): Core 위에 구축되어 파이썬 클래스를 데이터베이스 테이블에 매핑하고, 객체 영속성(persistence) 메커니즘인 **세션(Session)**을 제공. 이를 통해 SQL 쿼리를 파이썬 객체 관점에서 작성하고 호출 가능\n",
     "\n",
-    "## 1. 모델 선언 - Declare Models\n",
-    "- ORM 작업의 시작은 데이터베이스 스키마를 파이썬 객체로 정의하는것 -> Declarative Mapping\n",
-    "    1. Base 클래스 정의: 모든 매핑은 DeclarativeBase를 상속받는 Base 클래스로부터 시작\n",
-    "    2. 테이블 이름(`__tablename__`): 각 모델 클래스는 `__tablename__` 이라는 특별한 클래스 속성을 통해 매핑될 데이터베이스 테이블의 이름을 지정 **빠트리면 안됨**\n",
-    "    3. 컬럼 선언 (`Mapped`, `mapped_column`)\n",
-    "        - 테이블의 컬럼들은 `Mapped` __타입 어노테이션__ 을 사용하여 정의된다. EX) `id: Mapped[int]` -> 파이썬 타입이 자동으로 SQL 타입(`INTEGER`, `VARCHAR`) 로 변환\n",
-    "        - `OPTIONAL[]` 해당 컬럼이 NULL값 허용\n",
-    "        - `mapped_column()` 지시문은 더 세부적인 컬럼 설정이 필요할때 사용. `STRING(30)`, `primary_key=True`, `ForeignKey` 와 같은 제약조건\n",
-    "        - 관계 설정: `relationship()`은 두 ORM 클래스 간의 연결을 나타낸다. \n",
-    "            ```python\n",
-    "            class User(Base):\n",
-    "                __tablename__ = \"user_account\"\n",
     "\n",
-    "                id: Mapped[int] = mapped_column(primary_key=True)\n",
-    "                name: Mapped[str] = mapped_column(String(30))\n",
-    "                fullname: Mapped[Optional[str]]\n",
+    "## 1. 모델 선언 (Declarative Mapping)\n",
     "\n",
-    "                addresses: Mapped[List[\"Address\"]] = relationship(\n",
-    "                    back_populates=\"user\", cascade=\"all, delete-orphan\"\n",
-    "                )\n",
+    "ORM 작업을 시작하기 위한 첫 번째 단계는 데이터베이스 스키마를 파이썬 객체(모델)로 정의하는 것이다. 이를 **Declarative Mapping**이라고 부른다.\n",
     "\n",
-    "                def __repr__(self) -> str:\n",
-    "                    return f\"User(id={self.id!r}, name={self.name!r}, fullname={self.fullname!r})\"\n",
-    "            ```\n",
-    "            - 한 명의 `User`는 여러개의 `address`를 가질 수 있기 때문에 `Mapped[List[\"Address]]` 로 타입힌트\n",
-    "            - `back_populates=\"user\"`: 유저 객체의 addresses와 address 객체의 user와 연결\n",
-    "            -  한쪽에서 객체를 추가하거나 삭제할 때 다른 쪽에서도 자동으로 동기화\n",
-    "            - __repr__() 메서드: 필수는 아니지만, 디버깅할 때 객체를 쉽게 알아볼 수 있도록 해주는 아주 유용한 메서드\n",
+    "1.  **Base 클래스 정의**: 모든 ORM 모델은 `DeclarativeBase`를 상속받는 `Base` 클래스로부터 시작한다. 이 `Base` 클래스가 모델과 데이터베이스 테이블 간의 매핑을 관리하는 기반\n",
+    "2.  **테이블 이름 지정 (`__tablename__`)**: 각 모델 클래스는 매핑될 데이터베이스 테이블의 이름을 `__tablename__`이라는 특별한 클래스 속성을 통해 지정해야 한다. **이 속성을 빠뜨리면 안 됨!**\n",
+    "3.  **컬럼 선언 (`Mapped`, `mapped_column`)**:\n",
+    "      * 테이블의 컬럼들은 `Mapped` **타입 어노테이션**을 사용하여 정의한다. 예를 들어, `id: Mapped[int]`와 같이 선언하면 파이썬 타입(`int`)이 자동으로 해당 SQL 타입(`INTEGER`)으로 변환된다. `Mapped[Optional[str]]`와 같이 `Optional`을 사용하면 해당 컬럼이 NULL 값을 허용함을 나타낸다.\n",
+    "      * `mapped_column()` 지시문은 컬럼에 대한 더 세부적인 설정을 할 때 사용한다. 예를 들어, `String(30)`처럼 SQL 특정 타입을 지정하거나, `primary_key=True`로 **기본 키**를 지정하고, `ForeignKey`를 사용하여 **외래 키** 제약 조건을 설정할 수 있다. **모든 ORM 매핑 클래스에는 최소 하나의 기본 키 컬럼이 있어야 한다.**\n",
+    "      * **관계 설정 (`relationship()`)**: `relationship()`은 두 ORM 클래스(모델) 간의 논리적인 연결을 나타내는 데 사용된다. 이를 통해 데이터베이스 테이블 간의 관계(예: 일대다, 다대다)를 파이썬 객체 수준에서 정의할 수 있다.\n",
+    "        ```python\n",
+    "        from typing import List, Optional\n",
+    "        from sqlalchemy import String\n",
+    "        from sqlalchemy.orm import Mapped, mapped_column, relationship\n",
+    "        from sqlalchemy.ext.declarative import declarative_base\n",
     "\n",
+    "        Base = declarative_base() # Base 클래스 정의\n",
+    "\n",
+    "        class User(Base):\n",
+    "            __tablename__ = \"user_account\" # 테이블 이름 지정\n",
+    "\n",
+    "            id: Mapped[int] = mapped_column(primary_key=True) # 기본 키\n",
+    "            name: Mapped[str] = mapped_column(String(30))\n",
+    "            fullname: Mapped[Optional[str]] # NULL 허용 컬럼\n",
+    "\n",
+    "            # User와 Address 간의 일대다 관계 설정\n",
+    "            addresses: Mapped[List[\"Address\"]] = relationship(\n",
+    "                back_populates=\"user\", # 양방향 관계 설정\n",
+    "                cascade=\"all, delete-orphan\" # 부모 삭제 시 자식도 삭제\n",
+    "            )\n",
+    "\n",
+    "            def __repr__(self) -> str:\n",
+    "                return f\"User(id={self.id!r}, name={self.name!r}, fullname={self.fullname!r})\"\n",
+    "        ```\n",
+    "          * 위 예시에서 `addresses: Mapped[List[\"Address\"]]`는 한 명의 `User`가 여러 개의 `Address`를 가질 수 있음을 나타내는 타입 힌트이다.\n",
+    "          * `back_populates=\"user\"`는 `User` 객체의 `addresses`와 `Address` 객체의 `user` 속성을 서로 연결하여 **양방향 관계**를 설정한다. 이를 통해 한쪽에서 객체를 추가하거나 삭제할 때 다른 쪽에서도 자동으로 동기화된다.\n",
+    "          * `cascade=\"all, delete-orphan\"`은 부모 객체(`User`)가 삭제될 때 연결된 자식 객체(`Address`)도 함께 삭제되도록 설정하는 옵션이다.\n",
+    "      * **`__repr__()` 메서드**: 필수는 아니지만, 이 메서드를 정의하면 객체를 출력할 때 디버깅에 매우 유용하다. 객체의 주요 속성들을 포함하여 객체를 쉽게 알아볼 수 있는 문자열을 반환하도록 한다.\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "## 2. 엔진 생성 (create_engine)\n",
+    "\n",
+    "**Engine**은 데이터베이스 연결을 생성하는 팩토리 역할을 한다. 실제 데이터베이스 연결은 이 Engine을 통해 이루어지며, 연결 풀을 관리하여 연결을 빠르게 재사용할 수 있게 해준다.\n",
+    "\n",
+    "```python\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# SQLite 인메모리 데이터베이스 엔진 생성, echo=True로 SQL 쿼리 로그 출력\n",
+    "engine = create_engine(\"sqlite://\", echo=True)\n",
+    "```\n",
+    "\n",
+    "`create_engine(\"sqlite://\", echo=True)`와 같이 사용하며, `echo=True`는 데이터베이스 연결에서 발생하는 모든 SQL 쿼리를 표준 출력으로 로그하도록 지시한다. 학습 및 디버깅 단계에서 매우 유용하다.\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "## 3. DDL(Data Definition Language) 생성 (MetaData.create_all)\n",
+    "\n",
+    "정의된 모델(테이블 메타데이터)과 생성된 엔진을 사용하여 대상 데이터베이스에 실제 스키마(테이블)를 생성할 수 있다.\n",
+    "\n",
+    "```python\n",
+    "# Base에 정의된 모든 테이블을 데이터베이스에 생성\n",
+    "Base.metadata.create_all(engine)\n",
+    "```\n",
+    "\n",
+    "`Base.metadata.create_all(engine)` 메서드를 호출하면 `Base` 클래스에 정의된 모든 ORM 모델에 해당하는 테이블이 데이터베이스에 생성된다.\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "## 4. 객체 생성 및 영속화 (Session)\n",
+    "\n",
+    "데이터베이스에 데이터를 삽입하려면, 정의한 모델 클래스의 인스턴스를 생성하고 **세션(Session)** 객체를 사용하여 데이터베이스에 전달해야 한다.\n",
+    "\n",
+    "  * **Session**: 데이터베이스와 상호작용하며, ORM 객체의 변경 사항을 **추적**하고 트랜잭션을 관리하는 핵심 객체이다.\n",
+    "  * **`with Session(engine) as session:`**: 세션을 **컨텍스트 관리자** 스타일로 사용하는 것이 강력히 권장된다. 이 방식은 작업을 완료하면 세션이 자동으로 닫히고 데이터베이스 리소스가 안전하게 해제되도록 보장한다.\n",
+    "  * **`session.add_all()`**: 여러 객체를 한 번에 세션에 추가한다.\n",
+    "  * **`session.commit()`**: 세션에 보류 중인 모든 변경 사항(예: 새로운 객체 추가, 객체 속성 변경)을 데이터베이스에 **플러시(flush)*하고 현재 데이터베이스 트랜잭션을 커밋하여 변경 사항을 영구적으로 저장한다.\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "from sqlalchemy.orm import Session\n",
+    "\n",
+    "# 새로운 User 객체 생성\n",
+    "user1 = User(name=\"spongebob\", fullname=\"Spongebob Squarepants\")\n",
+    "user2 = User(name=\"sandy\", fullname=\"Sandy Cheeks\")\n",
+    "\n",
+    "# 세션을 통해 데이터베이스에 객체 추가 및 커밋\n",
+    "with Session(engine) as session:\n",
+    "    session.add_all([user1, user2]) # 여러 객체 한 번에 추가\n",
+    "    session.commit() # 변경 사항 커밋\n",
+    "    print(f\"Added users: {user1.id}, {user2.id}\") # 커밋 후 ID 할당 확인 가능\n",
+    "```\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "## 5 데이터 조회 (select, Session.scalars, where, join, Session.get)\n",
+    "\n",
+    "데이터베이스에 저장된 데이터를 가져오는 것은 ORM의 핵심 기능 중 하나이다.\n",
+    "\n",
+    "  * **`select()`**: SQL `SELECT` 문을 생성하는 함수이다.\n",
+    "  * **`Session.scalars()`**: `select()`로 생성된 쿼리를 실행하고, 선택된 ORM 객체들을 반복하는 `ScalarResult` 객체를 반환한다. 단일 컬럼을 조회할 때 유용하다.\n",
+    "  * **`Select.where()`**: 쿼리에 `WHERE` 조건을 추가하여 특정 조건을 만족하는 데이터만 가져오도록 한다.\n",
+    "  * **`Select.join()`**: 여러 테이블을 `JOIN`하여 쿼리할 때 사용한다. 관계가 설정된 모델 간에 데이터를 효율적으로 가져올 수 있다.\n",
+    "  * **`Session.get(Model, primary_key)`**: 특정 모델과 기본 키를 사용하여 단일 객체를 효율적으로 가져올 때 사용한다. 이 방법은 기본 키를 통한 조회를 위해 최적화되어 있다.\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "from sqlalchemy import select\n",
+    "\n",
+    "with Session(engine) as session:\n",
+    "    # 모든 User 객체 조회\n",
+    "    stmt = select(User)\n",
+    "    for user in session.scalars(stmt):\n",
+    "        print(f\"Found user: {user}\")\n",
+    "\n",
+    "    # 특정 이름을 가진 User 객체 조회\n",
+    "    stmt = select(User).where(User.name == \"spongebob\")\n",
+    "    spongebob = session.scalars(stmt).first() # 첫 번째 결과만 가져옴\n",
+    "    print(f\"Specific user: {spongebob}\")\n",
+    "\n",
+    "    # ID를 통해 User 객체 조회 (가장 효율적)\n",
+    "    user_by_id = session.get(User, 1) # User 모델의 기본 키가 1인 객체 조회\n",
+    "    print(f\"User by ID: {user_by_id}\")\n",
+    "```\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "## 6 데이터 변경 (commit, flush)\n",
+    "\n",
+    "세션은 ORM 매핑된 객체의 변경 사항을 자동으로 **추적**한다. 객체의 속성을 변경한 후 `session.commit()`을 호출하면 SQL `UPDATE` 문이 실행되어 변경 사항이 데이터베이스에 반영된다.\n",
+    "\n",
+    "  * **`session.flush()`**: 트랜잭션을 커밋하지 않고, 보류 중인 변경 사항에 대한 SQL(예: `INSERT`, `UPDATE`, `DELETE`)을 데이터베이스에 즉시 전송한다. 이는 변경 사항을 데이터베이스에 반영하지만, 아직 트랜잭션이 완료되지 않아 롤백이 가능한 상태로 유지된다. `session.commit()` 전에 ID 값을 미리 얻거나 다른 작업을 수행해야 할 때 유용하다.\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "with Session(engine) as session:\n",
+    "    # ID가 1인 User 객체 조회\n",
+    "    user_to_update = session.get(User, 1)\n",
+    "    if user_to_update:\n",
+    "        user_to_update.fullname = \"Squidward Tentacles\" # 객체 속성 변경\n",
+    "        session.commit() # 변경 사항 커밋\n",
+    "        print(f\"Updated user: {user_to_update}\")\n",
+    "```\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "## 7 데이터 삭제 (remove, Session.delete)\n",
+    "\n",
+    "데이터베이스에서 객체를 삭제하는 방법은 크게 두 가지이다.\n",
+    "\n",
+    "  * **`relationship`을 통한 삭제 (`collection.remove()`):** `relationship()`에 `cascade` 옵션이 적절히 설정되어 있다면, 관계가 설정된 컬렉션에서 객체를 제거하는 방식으로 해당 객체를 데이터베이스에서 삭제할 수 있다. 예를 들어, 부모 객체에서 자식 객체를 컬렉션에서 제거하면, `delete-orphan`과 같은 cascade 설정에 따라 자식 객체도 삭제될 수 있다.\n",
+    "  * **`session.delete()`**: 최상위 객체를 삭제할 때 사용한다. 이 메서드는 객체를 다음 플러시(flush) 시 삭제되도록 설정한다. 이 역시 `cascade` 옵션에 따라 관련된 객체도 함께 삭제될 수 있다.\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "with Session(engine) as session:\n",
+    "    # ID가 2인 User 객체 조회 후 삭제\n",
+    "    user_to_delete = session.get(User, 2)\n",
+    "    if user_to_delete:\n",
+    "        session.delete(user_to_delete) # 객체를 삭제하도록 세션에 표시\n",
+    "        session.commit() # 삭제 작업 커밋\n",
+    "        print(f\"Deleted user: {user_to_delete}\")\n",
+    "\n",
+    "    # 삭제 확인\n",
+    "    deleted_user = session.get(User, 2)\n",
+    "    print(f\"User after deletion attempt: {deleted_user}\") # None이 출력될 것임\n",
+    "```\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "이렇게 SQLAlchemy ORM의 핵심 개념들을 다시 한번 꼼꼼하게 살펴보았다. 개념을 이해하는 것을 넘어, 직접 코드를 작성하고 실행하며 오류를 해결하는 과정이 여러분을 진정한 숙련자로 만들 것이다.\n",
+    "\n",
+    "이제 이 개념들을 바탕으로 다음 훈련 과제를 진행해볼 준비가 되었나?\n",
     "\n"
    ]
   },
